syntax = "proto3";
import "entity.proto";

package flow;

service FlowChatServerService {
    rpc Start(StartRequest) returns (StartResponse) {}
    rpc Break(BreakRequest) returns (BreakResponse) {}
    rpc ConfirmationMessage(ConfirmationMessageRequest) returns (ConfirmationMessageResponse) {}
}

message StartRequest {
    int64 conversation_id = 1;
    int64 profile_id = 2;
    int64 domain_id = 3;
    Message message = 4;
    map<string, string>  variables = 5;
}

message StartResponse {
    Error error = 1;
}

message BreakRequest {
    int64 conversation_id = 1;
}

message BreakResponse {
    Error error = 1;
}

message ConfirmationMessageRequest {
    int64 conversation_id = 1;
    string confirmation_id = 2;
    repeated Message messages = 3;
}

message ConfirmationMessageResponse {
    Error error = 1;
}